tests/baselines/reference/privateIndexer.errors.txt
==== tests/cases/compiler/privateIndexer.ts (3 errors) ====
    // private indexers not allowed
    
    class C {
        private [x: string]: string;
        ~~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }
    
    class D {
        private [x: number]: string;
        ~~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }
    
    class E<T> {
        private [x: string]: T;
        ~~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }